2008-01-11  Werner Koch  <wk@g10code.com>

	* mimemaker.c (finalize_message): Add args PROTOCOL and ENCRYPT
	and use them to set the override message class.
	(mime_sign, mime_encrypt, mime_sign_encrypt): Pass this info via
	the new args.
	(do_mime_sign): Set micalg to sha1 for CMS.

	* message.cpp (message_decrypt): Add hack fro seldgenerated messages.

2008-01-10  Werner Koch  <wk@g10code.com>

	* mapihelp.cpp (get_gpgolmsgclass_tag, mapi_set_gpgol_msg_class):
	New.
	(mapi_change_message_class, mapi_get_message_type): Try override
	first.

	* message.cpp (message_incoming_handler): Remove arg MSGTYE and
	let the function retrieve it.  Changed all callers.  Retry after a
	sucessful message class change.
	* olflange.cpp (getMsgtype): Remove.  The caching might lead to
	problems and makes it all more complex.  Changed all callers to
	use mapi_get_message_type.
	
	* mimemaker.c (create_top_encryption_header) <SMIME>: Write empty
	line after header.

2008-01-09  Werner Koch  <wk@g10code.com>

	* mimeparser.c (finish_saved_body): New.
	(finish_attachment): Keep the body attachment open.
	(mime_decrypt, mime_verify): Close the saved body data.
	(t2body): Continue body attachments.

	* message.cpp (message_verify): Save changes.

	* mapihelp.cpp (mapi_change_message_class): Handle case of
	PGP/MIME signed with IPM.Note.  Save only of really needed, use
	FORCE_SAVE and keep it open for read and write.

2008-01-07  Marcus Brinkmann  <marcus@g10code.de>

	* engine-assuan.c (replace_dollar_s): Remove obsolete function.
	(get_quoted_socket_name): Remove obsolete function.
	(get_uiserver_name): Invoke GUI server with --daemon.  Fix buglet
	in assignment.
	(destroy_command): Change return type to void to suppress compiler
	warning.

2008-01-04  Werner Koch  <wk@g10code.com>

	* engine-assuan.c (send_options): Call AllowSetForegroundWindow.

	* main.c (read_options): Allo other values than 1 for enableDebug.
	* common.h (DBG_IOWORKER, DBG_IOWORKER_EXTRA, DBG_FILTER) 