@@ -1,3 +1,15 @@
+2008-01-18  Marcus Brinkmann  <marcus@g10code.de>
+
+	* mimeparser.c (mime_verify): New variable sig_len, and pass it on
+	to engine_verify_start.
+	* engine.h (engine_verify_start): Add new argument sig_len.
+	* engine.c (engine_verify_start): Add new argument sig_len and
+	pass it on to op_assuan_verify and op_gpgme_verify.
+	* engine-assuan.h (op_asssuan_verify): Add new argument sig_len.
+	* engine-gpgme.c (op_gpgme_verify): New argument sig_len and use
+	it instead of string length of signature.
+	* engine-assuan.c (op_assuan_verify): Likewise.
+
 2008-01-11  Werner Koch  <wk@g10code.com>
 
 	* mimemaker.c (finalize_message): Add args PROTOCOL and ENCRYPT
